<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EtherCat_SlaveBasicInfos" Id="{120317df-8240-4ee5-848f-454bb2c54f56}">
    <Declaration><![CDATA[TYPE ST_EtherCat_SlaveBasicInfos :
STRUCT
	// EC Master Infos
	{attribute 'hide'}
	sEtherCat_AmsNetId					: T_AmsNetID;						// EtherCAT master's AmsNetId (usually contain adress IP.2.1)
	{attribute 'hide'}
	arrEcSlaveConfigData				: ARRAY [1..100(* 16#FFFF *)] 	OF  ST_EcSlaveConfigData;
	{attribute 'hide'}
	wSlavesNumber						: WORD	:= 100;						// Slave's number 
	
	
	// EC Slave Infos	
	stSlaveCfgData						: ST_EcSlaveConfigData;
	sHardwareVersion					: STRING;							// CoE	-	16#1009
	sSoftwareVersion					: STRING;							// CoE	-	16#100A
	dwSafetyLogicSerialNo				: DWORD;							// CoE	-	16#F980:02
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>